--- a/ioctl-inter/Makefile
+++ b/ioctl-inter/Makefile
@@ -14,3 +14,9 @@ all:
 clean:
 	-$(MAKE) -C $(KDIR) M=${shell pwd} clean || true
 	-rm *.o *.ko *.mod.{c,o} modules.order Module.symvers || true
+	rm -f query_app
+
+app: query_app.c
+	gcc -o query_app query_app.c
+
+
